--- a/configs/VQ-8192.yaml
+++ b/configs/VQ-8192.yaml
@@ -1,13 +1,15 @@
-data_path: /mnt/localssd/ImageNet2012/train
-val_data_path: /mnt/localssd/ImageNet2012/val
+data_path: /home/hjy22/repos/CIFAR10
+val_data_path: /home/hjy22/repos/CIFAR10
+dataset: cifar10
 save_best: true
 image_size: 256
 vq_model: VQ-16
-enc_type: dinov2
-dec_type: dinov2
-semantic_guide: dinov2
-global_batch_size: 1024
-epochs: 200
+enc_type: simple
+dec_type: simple
+semantic_guide: none
+detail_guide: none
+global_batch_size: 32
+epochs: 1
 lr_scheduler: cosine
 lr: 3e-5
 #max_grad_norm: 1.0
@@ -25,14 +27,17 @@ v_patch_nums: [16]
 half_sem: false
 guide_type_1: class
 start_drop: 3
+log_every: 10000
+vis_every: 10000
 ckpt_every: 10000
 sem_loss_weight: 0.1
 enc_tuning_method: full
 lecam_loss_weight: 0.001
 weight_decay: 0.0
 disc_weight_decay: 0.0005
-disc_epoch_start: 56
+#disc_epoch_start: 56
+disc_epoch_start: 0
 disc_type: dinodisc
 aug_fade_steps: 0
 disc_adaptive_weight: true
-cloud_save_path: XQGAN-8192
+cloud_save_path: XQGAN-8192-simple-cifar10
