--- a/configs/VQ-8192.yaml
+++ b/configs/VQ-8192.yaml
@@ -1,5 +1,5 @@
-data_path: /home/hjy22/repos/CIFAR10
-val_data_path: /home/hjy22/repos/CIFAR10
+data_path: /home/hjy22/repos/CIFAR10/val
+val_data_path: /home/hjy22/repos/CIFAR10/val
 dataset: cifar10
 save_best: true
 image_size: 256
@@ -9,8 +9,9 @@ dec_type: simple
 semantic_guide: none
 detail_guide: none
 global_batch_size: 32
-epochs: 1
-lr_scheduler: cosine
+epochs: 300
+#lr_scheduler: cosine
+lr_scheduler: none
 lr: 3e-5
 #max_grad_norm: 1.0
 #reconstruction_weight: 4.0
@@ -22,13 +23,21 @@ ema: true
 codebook_drop: 0.0
 encoder_model: vit_base_patch14_dinov2.lvd142m
 decoder_model: vit_base_patch14_dinov2.lvd142m
+
+use_diffloss: false
+use_perceptual_loss: false
+use_disc_loss: false
+use_lecam_loss: false
+use_semantic_loss: false
+use_detail_loss: false
+
 num_latent_tokens: 256
 v_patch_nums: [16]
 half_sem: false
 guide_type_1: class
 start_drop: 3
-log_every: 10000
-vis_every: 10000
+log_every: 1000
+vis_every: 150000
 ckpt_every: 10000
 sem_loss_weight: 0.1
 enc_tuning_method: full
@@ -37,7 +46,10 @@ weight_decay: 0.0
 disc_weight_decay: 0.0005
 #disc_epoch_start: 56
 disc_epoch_start: 0
-disc_type: dinodisc
+disc_type: none
 aug_fade_steps: 0
 disc_adaptive_weight: true
 cloud_save_path: XQGAN-8192-simple-cifar10
+
+anneal_start: 100
+anneal_end: 200
